--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
   </head>
   <body>
     <p>hello world</p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto vitae
+      itaque pariatur corrupti vero ipsa!
+    </p>
   </body>
 </html>
