--- a/index.html
+++ b/index.html
@@ -4,15 +4,240 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Assignment B-13</title>
+    <!-- favicon  -->
+    <link
+      rel="shortcut icon"
+      href="./assets/logo-footer.png"
+      type="image/x-icon"
+    />
+
+    <!-- fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- font awsome for social media icon  -->
+    <script
+      src="https://kit.fontawesome.com/956467aeb1.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- css file  -->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p>hello world</p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto vitae
-      itaque pariatur corrupti vero ipsa!
-    </p>
+    <!-- header section start -->
+    <header>
+      <nav class="navigation container">
+        <div class="logo">
+          <img class="nav-logo" src="./assets/logo-navbar.png" alt="Logo" />
+        </div>
+        <div class="menu-items">
+          <ul>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">How It Works</a></li>
+            <li><a href="#">Why It's Different</a></li>
+          </ul>
+        </div>
+        <div class="nav-btn">
+          <button class="green-btn btn">Get Early Access</button>
+        </div>
+      </nav>
+    </header>
+    <!-- header end  -->
+
+    <!-- main section start  -->
+    <main class="all">
+      <!-- banner or hero section start  -->
+      <section class="banner">
+        <div class="banner-msg container">
+          <div class="early-access">
+            <img
+              src="./assets/early-access.png"
+              alt="Normal dot image for style"
+            />
+            <span class="text">Early Access Now Open</span>
+          </div>
+          <h2 class="banner-title">
+            Structured thinking, <br />
+            <span>not just note-taking.</span>
+          </h2>
+          <div class="banner-description">
+            <p>
+              A private space to store notes, links, and learning summaries —
+              designed to
+              <br />
+              help you think clearly, connect ideas, and turn learning into
+              long-term knowledge.
+            </p>
+          </div>
+          <div class="banner-btn">
+            <button class="green-btn btn">
+              Start Building Your Vault
+              <img src="./assets/ArrowRight.png" alt="Right arrow icon" />
+            </button>
+            <button class="btn transparent">
+              <img src="./assets/Play.png" alt="See How it works icon" /> See
+              How It Works
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- banner end  -->
+
+      <!-- notes section start  -->
+      <section class="notes">
+        <div class="notes-container container">
+          <div class="notes-title-des">
+            <h2 class="notes-title">Notes Don't Fail, Structure Does.</h2>
+            <p class="notes-description">
+              You're not bad at learning. Your tools just weren't built for how
+              knowledge actually works.
+            </p>
+          </div>
+          <div class="notes-card">
+            <div class="card">
+              <div class="icon-circle">
+                <img src="./assets/Vector.png" alt="Icon" />
+              </div>
+              <h3 class="card-title">Scattered Notes</h3>
+              <p class="card-description">
+                Your ideas live in 10 different apps, none of them connected.
+              </p>
+            </div>
+            <div class="card">
+              <div class="icon-circle">
+                <img src="./assets/Bookmarks.png" alt="Icon 2" />
+              </div>
+              <h3 class="card-title">Bookmark Overload</h3>
+              <p class="card-description">
+                Hundreds of saved links you'll never revisit or remember.
+              </p>
+            </div>
+            <div class="card">
+              <div class="icon-circle">
+                <img src="./assets/Brain.png" alt="Icon 3" />
+              </div>
+              <h3 class="card-title">No Idea Connections</h3>
+              <p class="card-description">
+                Insights stay isolated, never building into bigger
+                understanding.
+              </p>
+            </div>
+            <div class="card">
+              <div class="icon-circle">
+                <img src="./assets/Info.png" alt="Icon 4" />
+              </div>
+              <h3 class="card-title">Forgetting What You Learned</h3>
+              <p class="card-description">
+                Knowledge fades because there's no system to retain it.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- notes end -->
+
+      <!-- second brain section start  -->
+      <section class="second-brain">
+        <div class="brain-container container">
+          <div class="brain-img">
+            <img src="./assets/knowledge.png" alt="knowledge image" />
+          </div>
+          <aside class="brain-message">
+            <p class="solution">The Solution</p>
+            <h3 class="brain-title">
+              Your Second Brain, Structured By Design.
+            </h3>
+            <p class="brain-description">
+              Personal Knowledge Vault isn't another note-taking app. z <br />
+              It's a thinking environment where every note, link, and summary
+              <br />
+              becomes part of an interconnected web of understanding.
+            </p>
+            <div class="structure-feature">
+              <div class="feature">
+                <img src="./assets/CheckCircle.png" alt="check icon" />
+                <p class="feature-text">
+                  Capture ideas with structure built-in from day one
+                </p>
+              </div>
+              <div class="feature">
+                <img src="./assets/CheckCircle.png" alt="check icon" />
+                <p class="feature-text">
+                  Connect related concepts automatically as you write
+                </p>
+              </div>
+              <div class="feature">
+                <img src="./assets/CheckCircle.png" alt="check icon" />
+                <p class="feature-text">
+                  Build lasting knowledge through reflection prompts
+                </p>
+              </div>
+              <div class="feature">
+                <img src="./assets/CheckCircle.png" alt="check icon" />
+                <p class="feature-text">
+                  Find anything instantly with semantic search
+                </p>
+              </div>
+            </div>
+          </aside>
+        </div>
+      </section>
+      <!-- second brain end  -->
+
+      <!-- challenge early access section start  -->
+      <section class="chl-arly-access">
+        <div class="chl-arly-container container">
+          <h3 class="chl-arly-title">Ready To Think More Clearly</h3>
+          <p class="description">
+            Join thousands of learners who are building their personal knowledge
+            vaults. <br />
+            Start free, no credit card required.
+          </p>
+          <button class="green-btn btn">
+            Get Early Access &nbsp; <i class="fa-solid fa-arrow-right"></i>
+            <!-- <img src="./assets/ArrowRight.png" alt="right arrow icon" /> -->
+          </button>
+          <p class="arly-access-footer">
+            Free during early access &#8226; No credit card needed
+          </p>
+        </div>
+      </section>
+      <!-- challenge early access end  -->
+    </main>
+    <!-- main section end  -->
+
+    <!-- footer section start  -->
+    <footer>
+      <div class="footer-container container">
+        <div class="footer-main">
+          <div class="footer-logo">
+            <img src="./assets/logo-footer.png" alt=" footer logo" />
+          </div>
+          <!-- social media links  -->
+          <div class="social-links">
+            <p>Social Links</p>
+            <a href="https://x.com/" target="_blank">
+              <i class="fa-brands fa-x-twitter"></i> </a
+            >&nbsp;
+            <a href="https://www.linkedin.com/" target="_blank">
+              <i class="fa-brands fa-linkedin"></i> </a
+            >&nbsp;
+            <a href="https://www.facebook.com/" target="_blank">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </div>
+        </div>
+        <hr />
+        <div class="copyright-footer">
+          <p>&#169; 2026 Personal Knowledge Vault. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
