--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </div>
         <div class="menu-items">
           <ul>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">How It Works</a></li>
-            <li><a href="#">Why It's Different</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#works">How It Works</a></li>
+            <li><a href="#why">Why It's Different</a></li>
           </ul>
         </div>
         <div class="nav-btn">
@@ -61,10 +61,10 @@
             />
             <span class="text">Early Access Now Open</span>
           </div>
-          <h2 class="banner-title">
+          <h1 class="banner-title">
             Structured thinking, <br />
             <span>not just note-taking.</span>
-          </h2>
+          </h1>
           <div class="banner-description">
             <p>
               A private space to store notes, links, and learning summaries —
